--- a/The_Shop/templates/base.html.twig
+++ b/The_Shop/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Cake Shop!{% endblock %}</title>
         {% block stylesheets %}
-            <link href="{{ asset('css/blog.css') }}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet">
             <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
         {% endblock %}
     </head>
@@ -15,12 +15,10 @@
             </div>
             <div class="color">
                 <ul>
-                    <li><a class="active" href="#inicio">Inicio</a></li>
-                    <li><a href="#encomendas">Encomendas</a></li>
-                    <li><a href="#contact">Contactos</a></li>
-                    <li style="float:right"><a href="#">Autor</a></li>
-                    <li style="float:right"><a href="#">Email</a></li>
-                    <li style="float:right"><a href="#">Mensagem</a></li>
+                    <li><a class="active" href="{{ path('home') }}">Inicio</a></li>
+                    <li><a href="{{ path('shop',{slug: 'realizar-encomenda'}) }}">Encomendas</a></li>
+                    <li><a href="{{ path('contactos') }}">Contactos</a></li>
+                    <li style="float:right"><a href="{{ path('email') }}">Email</a></li>
                 </ul>
             </div>
             {% block body %}{% endblock %}
@@ -28,6 +26,8 @@
         <div id="contact">
             <h3>Isabel Silva <strong>|</strong> isabel.6.066@gmail.com</h3>
         </div>
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/blog.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
