--- a/Formulario/templates/base.html.twig
+++ b/Formulario/templates/base.html.twig
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
